+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 2.6.3
==========================

*Release date: XX-XX-XXX*

Core and Builtins
-----------------

- Issue #5994: the marshal module now has docstrings.

- Issue #5981: Fix two minor inf/nan issues in float.fromhex: (1) inf
  and nan strings with trailing whitespace were incorrectly rejected
  and (2) the interpretation of fromhex('-nan') didn't match that of
  float('-nan').

- Issue #5890: in subclasses of 'property' the __doc__ attribute was
  shadowed by classtype's, even if it was None.  property now
  inserts the __doc__ into the subclass instance __dict__.

- Issue #5724: (See also issue #4575.) Fix Py_IS_INFINITY macro to
  work correctly on x87 FPUs: it now forces its argument to double
  before testing for infinity.

- Issue #4971: Fix titlecase for characters that are their own
  titlecase, but not their own uppercase.

- Issue #5829: complex('1e-500') no longer raises an exception

- Issue #5787: object.__getattribute__(some_type, "__bases__") segfaulted on
  some builtin types.

- Issue #5283: Setting __class__ in __del__ caused a segfault.

- Issue #5759: float() didn't call __float__ on str subclasses.

- Issue #5108: Handle %s like %S and %R in PyUnicode_FromFormatV(): Call
  PyUnicode_DecodeUTF8() once, remember the result and output it in a second
  step. This avoids problems with counting UTF-8 bytes that ignores the effect
  of using the replace error handler in PyUnicode_DecodeUTF8().

Library
-------

- Issue #4066: smtplib.SMTP_SSL._get_socket now correctly returns the socket.
  Patch by Farhan Ahmad, test by Marcin Bachry.

- Issue #1655: Make imaplib IPv6-capable. Patch by Derek Morr.

- Issue #1664: Make nntplib IPv6-capable. Patch by Derek Morr.

- Issue #5971: StreamHandler.handleError now swallows IOErrors which occur when
  trying to print a traceback.
